# quant-agent-core

./: .gitignore  DEVELOPER.md  LICENSE.md  README.md  main.py  pyproject.toml
frontend/: app.html  index.html
frontend/css/: app.css  main.css
frontend/js/: api.js  app.js  assistant.js  backtest.js  charts.js  main.js  panels.js  parameters.js  predictions.js  state.js
src/fina/agent/: assistant.py  news.py  state.py  summarizer.py
src/fina/api/: dependencies.py  main.py  middleware.py  schemas.py
src/fina/backtest/: cross_signals.py  dsr.py  engine.py  metrics.py  montecarlo.py  portfolio_engine.py  signals.py  strategy.py  weights.py
src/fina/core/: config.py  exceptions.py  returns.py  volatility.py
src/fina/data/: cleaner.py  fetcher.py
src/fina/metrics/: correlation.py  ratios.py  returns.py  technical.py  volatility.py
src/fina/models/: arima.py  comparator.py  garch.py  hmm.py
tests/: conftest.py
tests/unit/: test_analysis.py  test_arima.py  test_assistant.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_montecarlo.py  test_backtest_signals.py  test_backtest_strategy.py  test_cleaner.py  test_comparator.py  test_config.py  test_correlation.py  test_cross_signals.py  test_dsr.py  test_fetcher.py  test_garch.py  test_hmm.py  test_main.py  test_news.py  test_portfolio_engine.py  test_providers.py  test_ratios.py  test_returns.py  test_routes_agent.py  test_routes_backtest.py  test_routes_models.py  test_routes_portfolio.py  test_summarizer.py  test_technical.py  test_volatility.py  test_weights.py
(+14 files in other folders)
